--- a/package.json
+++ b/package.json
@@ -109,6 +109,8 @@
     "mime": "^1.6.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "mongodb": "^5.9.2",
+    "mongoose": "^7.8.6",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
     "node-fetch": "^2.7.0",
