--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "asynckit": "^0.4.0",
     "axios": "^1.7.7",
     "base64-js": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "bignumber.js": "^9.1.2",
     "body-parser": "^1.20.3",
     "buffer-equal-constant-time": "^1.0.1",
@@ -35,7 +36,7 @@
     "delayed-stream": "^1.0.0",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "duplexify": "^4.1.3",
     "ecdsa-sig-formatter": "^1.0.11",
     "ee-first": "^1.1.1",
@@ -48,7 +49,8 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "event-target-shim": "^5.0.1",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "extend": "^3.0.2",
     "farmhash-modern": "^1.1.0",
     "fast-deep-equal": "^3.1.3",
@@ -66,7 +68,7 @@
     "gcp-metadata": "^6.1.0",
     "get-caller-file": "^2.0.5",
     "get-intrinsic": "^1.2.4",
-    "google-auth-library": "^9.14.2",
+    "google-auth-library": "^9.15.1",
     "google-gax": "^4.4.1",
     "gopd": "^1.0.1",
     "gtoken": "^7.1.0",
@@ -121,6 +123,8 @@
     "once": "^1.4.0",
     "p-limit": "^3.1.0",
     "parseurl": "^1.3.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "path-to-regexp": "^0.1.10",
     "proto3-json-serializer": "^2.0.2",
     "protobufjs": "^7.4.0",
