--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "arrify": "^2.0.1",
     "async-retry": "^1.3.3",
     "asynckit": "^0.4.0",
-    "axios": "^1.7.7",
+    "axios": "^1.8.4",
     "base64-js": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "bignumber.js": "^9.1.2",
@@ -117,6 +117,7 @@
     "negotiator": "^0.6.3",
     "node-fetch": "^2.7.0",
     "node-forge": "^1.3.1",
+    "node-schedule": "^2.1.1",
     "object-hash": "^3.0.0",
     "object-inspect": "^1.13.2",
     "on-finished": "^2.4.1",
